fixed spacing in hansard content #974

--- a/pombola/core/static/sass/_south-africa_overrides.scss
+++ b/pombola/core/static/sass/_south-africa_overrides.scss
@@ -1330,7 +1330,8 @@ li.speech {
        -moz-hyphens: auto;
             hyphens: auto;
     br {
-        display: none;
+        content: ' ';
+        display: inline'
     }
     .hov {
         font-size: 0.75em;
